--- a/src/app/main-style.css
+++ b/src/app/main-style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #191a1e;
+}
+
 .content-wrapper {
     margin: 1rem 0;
 }
@@ -37,4 +41,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.light-zone {
+    background-color: #fafafa;
 }
