--- a/src/app/components/home-items/modalities/styles.css
+++ b/src/app/components/home-items/modalities/styles.css
@@ -18,10 +18,17 @@
     position: relative;
 }
 
-.modalities-grid .modality-card  img {
+.modalities-grid .modality-card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.modalities-grid .modality-card img:hover {
+    opacity: 0.5;
+    
 }
 
 .modalities-grid .modality-card  h2 {
