--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   background-color: #f4f4f4;
+  font-family: "Roboto", sans-serif;
 }
 
 img, picture, video, canvas, svg {
